2006-07-22  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml:
	* dcprocessing.xml:
	* dcprocessextension.make.ave: The version number is 1.2.9 now
	* doc/en/dcprocessing.xml:
	* dcprocess.createpntthemefromgrid.ave: Fixed critical bug #1526864
	
2006-05-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.extendpolylines.ave: Only work on selected lines

2006-05-04  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.extendpolylines.ave:
	* dcprocess.extendpolylines.update.ave:
	* dcprocess.network.classifyconnections.update.ave: improved robustness
	of update scripts, cancel handling; fixed bug #1481601
	* dcprocessextension.make.ave: version number is 1.2.8+cvs now

2006-05-01  Steffen Macke <sdteffen@gmail.com>

	* dcprocessextension.make.ave:
	* build.xml:
	* dcprocessing.nsi: Updated for 1.2.8 release
	* doc/en/dcprocessing.xml: Updated for 1.2.8 release; Added index;
	switch from DocBook article to book
	* dcprocess.extendpolylines.ave:
	* dcprocess.extendpolylines.update.ave: New function to scale polylines
	
2006-04-09  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.network.classifyconnections.ave:
	* dcprocess.network.returndetail3.ave:
	* dcprocess.network.returndetail11.ave: Added new connection types
	35,115
	
2006-04-08  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.network.classifyconnections.ave:
	* dcprocess.network.returndetail5.ave:
	* dcprocess.network.returndetail6.ave: Added new connection types
	53,54,66
	* dcprocess.network.classifyconnections.ave: Connection detail for
	4 or more pipes connected is 99 now

2005-04-05  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.network.flipendlines.ave:
	* dcprocess.network.flipendlines.update.ave:
	* doc/en/dcprocessing.xml: new function "Flip End Lines" for preparation
	of network drawings.
	* doc/docbook.xsl:
	* doc/build.xml: removed WINDOWS-1256 encoding
	* doc/docbook_pdf.xsl: Using SVG icons in PDF
	* dcprocessing.nsi: